--- a/styles.css
+++ b/styles.css
@@ -302,13 +302,18 @@ body {
     cursor: pointer;
 }
 
-
-
 #sidebar {
+    width: 18%;
+    padding: 0;
+    border: 2px solid var(--dark-green);
+}
+
+
+#displayByTime, #displayByProjects {
     font-weight: 400;
     padding: 24px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 18%;
+    width: 100%;
     border: 2px solid var(--dark-green);
     user-select: none;
     color: #1f1f1f;
@@ -317,16 +322,16 @@ body {
     gap: 16px;
 }
 
-#sidebar>div {
-    cursor: pointer;
-}
 
-#sidebar>div:hover {
+#displayByTime>div:hover, #displayByProjects>div:hover {
     background-color: #1f1f1f;
     color: white !important;
     border-radius: 6px;
     fill: white;
 }
+
+
+
 
 .highlight {
     background-color: #1f1f1f;
@@ -368,11 +373,12 @@ body {
 
 /* ///Refactor this later */
 
-#sidebar>div {
+#displayByTime>div, #displayByProjects>div {
     height: 36px;
     display: flex;
     align-items: center;
-    gap: 8px
+    gap: 8px;
+    cursor: pointer;
 }
 
 .svg-span {
@@ -571,4 +577,13 @@ body {
 
 .checkListUl {
     font-size: 14px;
+}
+
+
+
+#displayByTime {
+    border: 1px solid black
+}
+#displayByProjects {
+    border: 1px solid black
 }
